--- a/ffmpeg-kit-publisher/.github/workflows/publish.yml
+++ b/ffmpeg-kit-publisher/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Download Gradle
+      - name: Download Gradle and publish
         uses: gradle/gradle-build-action@v2
         with:
           arguments: publish --no-daemon
